@@ -16,7 +16,7 @@ sonar.links.issue=https://github.com/gansm/finalcut/issues
 #  Configuration
 #----------------------------------------------------------------------
 sonar.sources=.
-sonar.cfamily.build-wrapper-output=bw-output
+sonar.cfamily.compile-commands=bw-output/compile_commands.json
 sonar.cfamily.threads=2
 sonar.exclusions=final/font/**,final/fconfig.h
 sonar.coverage.exclusions=**/**
